[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Opera Snapshot_2021-11-16_222744_www.behance.net.png" type="Texture" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://Assets/clipart4679363.png" type="Texture" id=3]
[ext_resource path="res://Assets/KGBehindTheseHazelEyes.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/pngwing.com.png" type="Texture" id=5]
[ext_resource path="res://InspCounterBathroom.gd" type="Script" id=6]
[ext_resource path="res://WindowB.gd" type="Script" id=7]
[ext_resource path="res://Towel.gd" type="Script" id=8]
[ext_resource path="res://TattooMan.gd" type="Script" id=9]
[ext_resource path="res://Wooman.gd" type="Script" id=10]
[ext_resource path="res://Mirror.gd" type="Script" id=11]
[ext_resource path="res://Wardrobe.gd" type="Script" id=12]
[ext_resource path="res://Bottles.gd" type="Script" id=13]
[ext_resource path="res://Cucuretka.gd" type="Script" id=14]
[ext_resource path="res://PlantsB.gd" type="Script" id=15]
[ext_resource path="res://Wood.gd" type="Script" id=16]
[ext_resource path="res://Assets/KEY0.CC-American-Cockroach-Insect-Drawing-German-Cockroach-Cockroach-Png-Transparent-Background.png" type="Texture" id=17]
[ext_resource path="res://BathroomScene.gd" type="Script" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 14.75 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 4 )

[node name="Node" type="Node"]
script = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 767, 375.222 )
scale = Vector2( 1.159, 1.13438 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Menu" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Menu"]
position = Vector2( 57.375, 46.3437 )
scale = Vector2( 0.192949, 0.142918 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Menu"]
position = Vector2( 58, 47.5 )
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="InspCounter" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="InspCounter"]
margin_left = 1365.0
margin_top = 10.0
margin_right = 1447.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0.964706, 0.921569, 0.921569, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="InspCounter"]
position = Vector2( 1476.12, 36.8047 )
scale = Vector2( 0.10358, 0.100847 )
texture = ExtResource( 5 )

[node name="Window" type="Area2D" parent="."]
script = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Window"]
polygon = PoolVector2Array( 1101, -6, 1101, 129, 1140, 132, 1140, 161, 1198, 175, 1200, 137, 1245, 143, 1255, 0 )

[node name="Towel" type="Area2D" parent="."]
script = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Towel"]
polygon = PoolVector2Array( 342, 159, 439, 184, 433, 198, 476, 348, 450, 344, 449, 351, 439, 350, 431, 342, 385, 334, 379, 330, 335, 183 )

[node name="TattooMan" type="Area2D" parent="."]
script = ExtResource( 9 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TattooMan"]
polygon = PoolVector2Array( 1022, 450, 1037, 435, 1067, 432, 1086, 445, 1094, 463, 1098, 474, 1092, 483, 1080, 501, 1083, 506, 1122, 510, 1124, 519, 1124, 545, 1121, 550, 1122, 578, 1117, 600, 1111, 605, 1093, 600, 1092, 617, 1099, 632, 1106, 651, 1114, 684, 1116, 712, 1127, 735, 1135, 749, 1136, 769, 1133, 788, 1139, 828, 1130, 830, 1119, 825, 1113, 812, 1101, 803, 1095, 796, 1090, 788, 1110, 783, 1109, 770, 1103, 768, 1103, 752, 1089, 743, 1088, 736, 1068, 698, 1068, 758, 1075, 773, 1069, 782, 1065, 828, 1069, 848, 1059, 852, 1026, 833, 1019, 819, 1024, 803, 1039, 810, 1039, 788, 1038, 770, 1029, 752, 1014, 659, 1007, 651, 997, 647, 989, 634, 984, 613, 972, 600, 972, 574, 1002, 557, 1016, 543, 1045, 522, 1044, 504, 1029, 495, 1019, 475 )

[node name="Wooman" type="Area2D" parent="."]
script = ExtResource( 10 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Wooman"]
polygon = PoolVector2Array( 700, 259, 703, 247, 702, 229, 698, 206, 703, 199, 718, 199, 735, 207, 740, 205, 754, 211, 758, 221, 772, 237, 774, 254, 772, 273, 781, 291, 785, 316, 774, 325, 772, 356, 766, 359, 755, 344, 754, 345, 756, 369, 751, 373, 725, 272 )

[node name="Mirror" type="Area2D" parent="."]
script = ExtResource( 11 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Mirror"]
polygon = PoolVector2Array( 1391, 126, 1425, 123, 1438, 217, 1394, 495, 1357, 373 )

[node name="Wardrobe" type="Area2D" parent="."]
script = ExtResource( 12 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Wardrobe"]
polygon = PoolVector2Array( 401, 755, 194, 281, 62, 260, -2, 331, 5, 573, 183, 880, 233, 910 )

[node name="Bottles" type="Area2D" parent="."]
script = ExtResource( 13 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bottles"]
polygon = PoolVector2Array( 609, 51, 677, 14, 750, 33, 752, 58, 718, 74, 673, 85, 614, 74 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Bottles"]
polygon = PoolVector2Array( 700, 92, 770, 110, 773, 133, 727, 164, 672, 171, 631, 158, 627, 126 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Bottles"]
polygon = PoolVector2Array( 341, 232, 298, 251, 378, 468, 426, 433 )

[node name="Cucuretka" type="Area2D" parent="."]
script = ExtResource( 14 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Cucuretka"]
polygon = PoolVector2Array( 886, 361, 888, 343, 904, 331, 926, 331, 940, 345, 941, 367, 932, 377, 935, 403, 928, 402, 924, 379, 910, 382, 897, 377, 898, 398, 894, 402, 889, 398 )

[node name="Plants" type="Area2D" parent="."]
script = ExtResource( 15 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Plants"]
polygon = PoolVector2Array( 1103, 132, 1106, 149, 1101, 156, 1103, 166, 1104, 183, 1115, 191, 1124, 192, 1135, 181, 1138, 156, 1130, 147, 1137, 143, 1137, 134 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Plants"]
polygon = PoolVector2Array( 1206, 138, 1216, 145, 1225, 146, 1234, 144, 1241, 148, 1244, 154, 1228, 174, 1228, 197, 1218, 203, 1206, 202, 1199, 195, 1199, 176, 1200, 172, 1203, 162, 1200, 157, 1201, 147 )

[node name="Wood" type="Area2D" parent="."]
script = ExtResource( 16 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Wood"]
polygon = PoolVector2Array( 1416, 639, 1444, 641, 1446, 656, 1386, 787, 1423, 768, 1383, 800, 1352, 863, 1318, 865, 1313, 853, 1321, 838, 1316, 829, 1331, 819, 1360, 755, 1358, 734, 1292, 709, 1370, 728 )

[node name="Bugg" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Bugg"]
position = Vector2( 543, 502 )
rotation = -0.922263
scale = Vector2( 0.0165576, 0.0169806 )
texture = ExtResource( 17 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bugg"]
polygon = PoolVector2Array( 537, 503, 531, 504, 535, 500, 540, 499, 544, 497, 548, 497, 551, 498, 552, 502, 553, 504, 550, 504, 547, 506, 544, 505, 541, 504, 539, 506, 538, 510, 537, 506 )

[node name="Bugg2" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Bugg2"]
position = Vector2( 1063.42, 267.059 )
rotation = -0.192406
scale = Vector2( 0.018496, 0.0122769 )
texture = ExtResource( 17 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bugg2"]
polygon = PoolVector2Array( 1052, 263, 1060, 262, 1064, 263, 1074, 267, 1070, 273, 1067, 270, 1064, 271, 1063, 270, 1061, 269, 1061, 267, 1053, 269, 1059, 265 )

[node name="Bugg3" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Bugg3"]
position = Vector2( 1512, 324 )
rotation = -0.922263
scale = Vector2( 0.0278575, 0.0412099 )
texture = ExtResource( 17 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bugg3"]
polygon = PoolVector2Array( 1499, 325, 1486, 327, 1492, 315, 1504, 314, 1529, 316, 1533, 329, 1520, 334, 1508, 328, 1503, 339 )

[node name="Bugg4" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Bugg4"]
position = Vector2( 444, 14 )
rotation = -0.79572
scale = Vector2( 0.0288787, 0.031136 )
texture = ExtResource( 17 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bugg4"]
polygon = PoolVector2Array( 434, 13, 423, 15, 433, 8, 438, 7, 461, 7, 462, 20, 443, 20, 441, 15, 433, 26 )

[connection signal="input_event" from="Menu" to="Menu" method="_on_Menu_input_event"]
[connection signal="input_event" from="Window" to="Window" method="_on_Window_input_event"]
[connection signal="input_event" from="Towel" to="InspCounter" method="_on_Towel_input_event"]
[connection signal="input_event" from="Towel" to="Towel" method="_on_Towel_input_event"]
[connection signal="input_event" from="TattooMan" to="InspCounter" method="_on_TattooMan_input_event"]
[connection signal="input_event" from="TattooMan" to="TattooMan" method="_on_TattooMan_input_event"]
[connection signal="input_event" from="Wooman" to="InspCounter" method="_on_Wooman_input_event"]
[connection signal="input_event" from="Wooman" to="Wooman" method="_on_Wooman_input_event"]
[connection signal="input_event" from="Mirror" to="InspCounter" method="_on_Mirror_input_event"]
[connection signal="input_event" from="Mirror" to="Mirror" method="_on_Mirror_input_event"]
[connection signal="input_event" from="Wardrobe" to="InspCounter" method="_on_Wardrobe_input_event"]
[connection signal="input_event" from="Wardrobe" to="Wardrobe" method="_on_Wardrobe_input_event"]
[connection signal="input_event" from="Bottles" to="InspCounter" method="_on_Bottles_input_event"]
[connection signal="input_event" from="Bottles" to="Bottles" method="_on_Bottles_input_event"]
[connection signal="input_event" from="Cucuretka" to="InspCounter" method="_on_Cucuretka_input_event"]
[connection signal="input_event" from="Cucuretka" to="Cucuretka" method="_on_Cucuretka_input_event"]
[connection signal="input_event" from="Plants" to="InspCounter" method="_on_Plants_input_event"]
[connection signal="input_event" from="Plants" to="Plants" method="_on_Plants_input_event"]
[connection signal="input_event" from="Wood" to="InspCounter" method="_on_Wood_input_event"]
[connection signal="input_event" from="Wood" to="Wood" method="_on_Wood_input_event"]
[connection signal="input_event" from="Bugg" to="." method="_on_Bugg_input_event"]
[connection signal="input_event" from="Bugg2" to="." method="_on_Bugg2_input_event"]
[connection signal="input_event" from="Bugg3" to="." method="_on_Bugg3_input_event"]
[connection signal="input_event" from="Bugg4" to="." method="_on_Bugg4_input_event"]
